5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1635_1054.log
== TEST (2019-04-04 19:21:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y = 3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (2*X + Y = 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:21:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:22:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:23:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y =3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (2*X + Y =3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:24:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: "ponto pertence a reta"
else:
	mensagem: "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: ("ponto pertence a reta")
else:
	mensagem: ("ponto nao pertence a reta")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:20:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y == 3):
	mensagem: X,Y + "ponto pertence a reta"
else:
	mensagem: ("ponto nao pertence a reta")
print(mensagem)
-- ERROR:
File "XXXX", line 7
    mensagem: X,Y + "ponto pertence a reta"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:21:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2*X + Y = 3):
	mensagem: " ponto pertence a reta"
else:
	mensagem: (" ponto nao pertence a reta")
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (2*X + Y = 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:22:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))

-- ERROR:
File "XXXX", line 6
    if (2*X + Y = 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("qual a coordenada X: "))
y = float(input("qual a coordenada Y: "))
if (2 * x + y = 3 ):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 6
    if (2 * x + y = 3 ):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("qual a coordenada X: "))
y = float(input("qual a coordenada Y: "))
if (y = 3  - 2 x):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (y = 3  - 2 x):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:27:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if ((x - X)/(y- Y)= 2:
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    if ((x - X)/(y- Y)= 2:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:28:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2X + Y = 3):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    if (2X + Y = 3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:29:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2 * X + Y = 3):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    if (2 * X + Y = 3):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2 * X + Y == 3):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("qual a coordenada X: "))
Y = float(input("qual a coordenada Y: "))
if (2 * X + Y == 3):
	mensagem = (" ponto pertence a reta ")
else: 
	mensagem = (" ponto nao pertence a reta")
print(mensagem)

-- EXECUTION TIME:
0.173339
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
